--- a/week6/index.html
+++ b/week6/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="./main.js"></script>
+    <div id="app">
+      <h1>Three.js</h1>
+      <h2>第１回課題</h2>
+      <p>モデルの基礎</p>
+      <a href="./src/week6.html">week6</a>
+      <h2>第２回課題</h2>
+      <p>ビルボードの基礎</p>
+      <a href="./src/week9.html">week9</a>
+    </div>
+    <!-- <script type="module" src="./main.js"></script> -->
+    <!-- <script type="module" src="./week9.js"></script> -->
   </body>
 </html>
